restructured page away from css grid, realigned elements, fixed footer placement

--- a/style/index.css
+++ b/style/index.css
@@ -1,23 +1,15 @@
 /*GRID/ GRID ASSIGNMENT*/
 
-html {
+html, body {
 	margin: 0;
 	padding: 0;
+	height: 100%;
 
 }
 
 .container {
-	display: grid;
-	height: 750px;
+	height: 100%;
 	width: auto;
-	grid-template-columns: repeat(3, 1fr);	
-	grid-template-rows: repeat(3, 1fr);
-	grid-template-areas: 
-	"nav nav nav" 
-	". search ." 
-	"footer footer footer";
-	justify-content: center;
-	align-content: center;
 	font-family: sans-serif;
 	font-size: 12px;
 
@@ -25,15 +17,18 @@ html {
 }
 
 .main {
-	grid-area: search;
-	display: inline-block;
+	display: block;
+	position: relative;
+	text-align: center;
+	padding-top: 100px
 }
 
 .nav {
-	grid-area: nav;
+	position: relative;
 	list-style-type: none;
-	display: inline-block;	
+	display: inline;	
 	word-spacing: 15px;
+	width: 100%;
 }
 
 .left, .right {
@@ -41,13 +36,14 @@ html {
 }
 
 footer {
-	grid-area: footer;
-	display: inline-block;
-	align-self: end;
-	background: whitesmoke;
-	border: 1px solid #e8e8e8d1;
-	padding: 0px 0px 10px 0px;
+	background: #f1f1f1;
+	border: 1px solid #e4e4e4;
 	word-spacing: 15px;
+	height: 50px;
+	margin: -50px 0px 0px 0px;
+	display: inline-block;
+	width: 100%;
+
 }
 
 .foot_l, .foot_r {
@@ -60,18 +56,38 @@ footer {
 }
 
 .foot_r {
-	padding: 0px 40px 0px 0px;
+	padding: 0px 8px 0px 0px;
 }
+
+.section {
+	height: 100%;
+	overflow: auto;
+	margin: : 0px 0px 50px 0px;
+	width: auto;
+}
+
+.right {
+	right: 25px;
+}
+
+
 
 /*NAVIGATION/FOOTER ALIGNMENT*/
 
 .left {
 	float: left;
+	padding: 0px 0px 0px 8px;
 }
 
 .right, .foot_r {
 	float: right;
 }
+
+
+
+
+
+
 
 
 /*NAVIGATION BAR TEXT DISPLAY*/
@@ -81,30 +97,39 @@ body .container .nav .right a, body .container .nav .left a {
 	color: black;
 }
 
-body .container footer .foot_l a, body .container footer .foot_r a {
+body footer .foot_l a, body footer .foot_r a {
 	text-decoration-line: none;
 	color: black;
 }
 
 
+
+
+
+
+
+
+
+
+
 /*SEARCH AREA*/
 
 img {
-	position: relative;
-	left: 78px;
-	bottom: 5px;
+	margin-bottom: 15px;
 }
 
 .search{
 	text-align: center;
+	position: relative;
+
 
 }
 
 .box {
-	width: 428px;
+	width: 500px;
 	height: 30px;
 	border-radius: 2px;
-	box-shadow: -2px 1px 5px -2px #000000;
+	box-shadow: 0px 6px 12px -5px #949494;
 	border: 1px solid rgba(234, 234, 234, 0.52);
 }
 
